modified:   app/assets/stylesheets/bootstrap_overrides.scss 	modified:   app/assets/stylesheets/search.scss 	modified:   app/assets/stylesheets/search_box.scss 	modified:   app/assets/stylesheets/variables.scss 	modified:   app/controllers/pairs_controller.rb 	modified:   app/controllers/profiles_controller.rb 	modified:   app/controllers/search_controller.rb 	modified:   app/models/pair.rb 	modified:   app/models/profile.rb 	modified:   app/models/skill.rb 	new file:   app/views/kaminari/_first_page.html.haml 	new file:   app/views/kaminari/_gap.html.haml 	new file:   app/views/kaminari/_last_page.html.haml 	new file:   app/views/kaminari/_next_page.html.haml 	new file:   app/views/kaminari/_page.html.haml 	new file:   app/views/kaminari/_paginator.html.haml 	new file:   app/views/kaminari/_prev_page.html.haml 	modified:   app/views/pairs/_form.html.haml 	modified:   app/views/search/_profile_search.html.haml 	modified:   app/views/search/index.html.haml 	modified:   config/routes.rb 	modified:   db/migrate/20150204094307_create_pairs.rb 	modified:   db/schema.rb 	modified:   db/seeds.rb Please enter the commit message for your changes. Lines starting On branch master Your branch is up-to-date with 'origin/master'. Changes to be committed:   (use "git reset HEAD <file>..." to unstage)
	modified:   app/assets/stylesheets/application.scss
	modified:   app/assets/stylesheets/bootstrap_overrides.scss
	modified:   app/assets/stylesheets/search.scss
	modified:   app/assets/stylesheets/search_box.scss
	modified:   app/assets/stylesheets/variables.scss
	modified:   app/controllers/pairs_controller.rb
	modified:   app/controllers/profiles_controller.rb
	modified:   app/controllers/search_controller.rb
	modified:   app/models/pair.rb
	modified:   app/models/profile.rb
	modified:   app/models/skill.rb
	new file:   app/views/kaminari/_first_page.html.haml
	new file:   app/views/kaminari/_gap.html.haml
	new file:   app/views/kaminari/_last_page.html.haml
	new file:   app/views/

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -35,6 +35,7 @@
 }
 
 .search-items{
+  background-color: #fff;
   @extend .col-md-6;
   // margin-top: 20px;
   margin-bottom: 0;
@@ -42,15 +43,12 @@
   .items-list{
     li{
       background-color: #fff;
-
       height: 100%;
       width: 100%;
       margin: 0px;
       float: left;
-      // margin-left: 5px;
-      // margin-right: 5px;
     }
-    .has-hover:hover { 
+    .has-hover:hover {
       background-color: #F4F9FC;
     }
     .active{
