search map & list add markers to search map and edit search list

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -29,7 +29,6 @@
   width: 50%;
 }
 
-
 #search-controls{
   margin-top: 7.5px;
 }
@@ -57,9 +56,8 @@
   }
 }
 
-
 .search-filter{
-  background-color: #d4d4d4;
+  background-color: #ECF0F1;
   height: 100px;
   widows: 100%;
   padding-bottom: 5px;
