--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -50,7 +50,7 @@
     var marker = new google.maps.Marker({
       position: new google.maps.LatLng(profile.latitude,profile.longitude),
       map: map,
-      icon: '/images/geek_marker.png',
+      icon: '/images/red_marker.png',
       title: profile.first_name + " " + profile.last_name
     });
   }(window, google, window.Mapster || (window.Mapster = {})));
