--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -34,13 +34,12 @@
       $(this).removeClass('has-hover');
       //change the marker
       for(var i= 0; i < markers.length; i++){
-        markers[i].setIcon("/images/geek_marker.png");
+        markers[i].setIcon("/images/black_marker.png");
         infowindows[i].close();
         if (markers[i]["id"] == this.id) {
-          infowindows[i].open(map, markers[i]);
-          console.log(infowindows);
+          infowindows[i].open(map, markers[i]);;
           map.setCenter((markers[i].getPosition()));
-          markers[i].setIcon("/images/black_marker.png");
+          markers[i].setIcon("/images/red_marker.png");
         }
       }
     });
@@ -54,14 +53,14 @@
         position: latLng,
         map: map,
         animation: google.maps.Animation.DROP,
-        icon: '/images/geek_marker.png',
+        icon: '/images/black_marker.png',
         title: profiles[i].first_name + " " + profiles[i].last_name
       });
       marker.id = profiles[i].id;
 
       //set infowindow
       var infowindow = new google.maps.InfoWindow();
-      var contentString = "<h4>" + profiles[i].first_name + ' ' + profiles[i].last_name + '</h4>' + "Address: " + profiles[i].address;
+      var contentString = "<h4>" + profiles[i].first_name + ' ' + profiles[i].last_name + '</h4>' + profiles[i].address;
       infowindow.setContent(contentString);
       infowindow.id = profiles[i].id;
       infowindows.push(infowindow);
@@ -71,8 +70,8 @@
         return function() {
           //reset all markers
           for (var m = 0; m < profiles.length; m++) {
-            markers[m].setIcon("/images/geek_marker.png");
-            marker.setIcon("/images/black_marker.png");
+            markers[m].setIcon("/images/black_marker.png");
+            marker.setIcon("/images/red_marker.png");
             infowindows[m].close();
           }
 
