--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,8 @@
 @import "bootstrap";
 @import "variables";
 @import "mixins";
+@import "brand-buttons";
+@import 'bootstrap-datetimepicker';
 
 body {
   background:#ECF0F1; // #EDF0F5; //rgb(235, 238, 243);
@@ -95,19 +97,19 @@ input[id^='profile_age'] {
 
 .nav{
   .badge{
-    font-size: 14px;      
+    font-size: 14px;
     margin:auto;
     text-align:center;
     vertical-align:middle;
     background-color: $red;
   }
-  .ion-android-notifications, 
-  .ion-android-settings, 
+  .ion-android-notifications,
+  .ion-android-settings,
   .ion-person-stalker{
     margin:auto;
     text-align:center;
     vertical-align:middle;
-    font-size: 18px;      
+    font-size: 18px;
   }
   .ion-search{
     font-size: 15px;
