--- a/app/assets/stylesheets/search_box.scss
+++ b/app/assets/stylesheets/search_box.scss
@@ -1,4 +1,6 @@
 .search-item-box{
+  padding-top: 5px;
+  padding-bottom: 5px;
   border-bottom: 1px solid #ECF0F1;
   .item-img{
     width: 100px;
@@ -50,8 +52,18 @@
 
   .pait-btn{
     // position: absolute;
-    margin-right: 5px;
+    margin-right: 10px;
     margin-top: 5px;
     float: right;
+    a{
+      padding-top: 1px;
+      padding-bottom: 0px;
+    }
+    .ion-code-working{
+      font-size: 20px;
+      margin:auto;
+      text-align:center;
+      vertical-align:middle;
+    }
   }
 }
