--- a/app/views/search/_profile_skills_search.html.haml
+++ b/app/views/search/_profile_skills_search.html.haml
@@ -1,1 +1,1 @@
-= link_to skill.name, search_path(skill_search: skill.name), class: "skills button-xs btn-gray"
+= link_to skill.name, search_path(skill_search: skill.name), class: "skills button-xs btn-itunes-inversed"
