--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import "variables";
 @import "mixins";
 @import "brand-buttons";
+@import "brand-buttons-inversed";
 @import 'bootstrap-datetimepicker';
 
 body {
