--- a/app/assets/stylesheets/search_box.scss
+++ b/app/assets/stylesheets/search_box.scss
@@ -12,6 +12,7 @@
   .info{
     // display: inline-block;
     .bio {
+      height: 32px;
       overflow: hidden;
       text-overflow: ellipsis;
       display: -webkit-box;
