--- a/app/views/pairs/_form.html.haml
+++ b/app/views/pairs/_form.html.haml
@@ -6,9 +6,14 @@
     = f.input :pair_time, as: :string, input_html: {"data-mask" => "99:99"}
     = f.input :navigator_id,  as: :hidden
     = f.input :address
-    = f.input :address_details
-    = f.input :details
-    = f.input :type
+    = f.input :address_details, label: "Location details"
+
+    = f.simple_fields_for :skill, validate: true, required: true do |s|
+      = s.input :email, collection: current_user.profile.skills, as: :check_boxes
+
+    = f.input :details, label: "Reason of pairing"
+    = f.input :type, label: "Online/Offline"
+    = f.input :hangout_url, label: "URL", placeholder: 'google hangout url, skayp id'
   .modal-footer
     .form-actions
       %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
